chore: fix scrollbars for kontrollsamtale module

--- a/src/pages/kontrollsamtale/HentOgVisKontrollsamtaler.module.less
+++ b/src/pages/kontrollsamtale/HentOgVisKontrollsamtaler.module.less
@@ -6,18 +6,20 @@
     gap: @spacing-s;
     max-height: 500px;
     padding-right: 2rem;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
-/*
-::-webkit-scrollbar {
+//-- På windows vil scrollbars vanligvis alltid vises, mens på mac gjør dem ikke. det kan gjøre det vanskelig å se om containeren med kontrollsamtalen kan scrolles gjennom --------
+.kontrollsamtalerContainer::-webkit-scrollbar {
     -webkit-appearance: none;
-    width: 5px;
+    width: 7px;
 }
 
-::-webkit-scrollbar-thumb {
+.kontrollsamtalerContainer::-webkit-scrollbar-thumb {
     border-radius: 2px;
     background-color: rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
 }
-*/
+
+//-----------------------------------------------------------------------
